Fix add to cart button on product card showing when clicked on mobile

--- a/src/components/Shop/Shop.module.css
+++ b/src/components/Shop/Shop.module.css
@@ -250,24 +250,12 @@
   white-space: normal; /* allows multi-line clamp */
   font-size: 0.95rem;
 }
-.addToCartWrapper {
-  position: absolute;
-  width: 90%;
-  padding: 8px 0;
-  background-color: #c286faee;
-  top: 52%;
-  right: 5%;
-  border-radius: 6px;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.2s ease;
-  border: 1px solid rgb(85, 59, 107);
-}
 
 /* ------Hide desktop version elements--------------- */
 .filterOptionsOnDesktopContainer,
 .filterTitleOnDesktop,
-.filterListOnDesktop {
+.filterListOnDesktop,
+.addToCartWrapper {
   display: none;
 }
 /* -----------------For Larger Screens---------------- */
@@ -430,11 +418,19 @@
   }
 
   .addToCartWrapper {
+    display: block;
+    position: absolute;
     width: 80%;
     padding: 16px 0;
+    background-color: #c286faee;
     top: 69%;
     right: 10%;
+    border-radius: 6px;
     cursor: pointer;
+    border: 1px solid rgb(85, 59, 107);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s ease;
   }
   .addToCartWrapper:hover {
     color: #00000088;
